fix button alignment in AEM 6.5

--- a/bundle/src/main/webapp/app-root/clientlibs/io.wcm.caconfig.editor/css/editor.css
+++ b/bundle/src/main/webapp/app-root/clientlibs/io.wcm.caconfig.editor/css/editor.css
@@ -242,6 +242,8 @@ span.caconfig-tagbrowser {
 .caconfig-help-inline-popup button {
   padding: 0;
   min-height: 0;
+  min-width: 0;
+  line-height: 1rem;
 }
 
 .coral-Table-headerCell .caconfig-help-inline-popup {
